syntax = "proto3";

package baepo.viscaufs.fs.v1;

option go_package = "github.com/baepo-cloud/viscaufs-common/fspb/v1;fspb";

message FileAttributes {
  uint64 inode = 1;
  uint64 size = 2;
  uint64 blocks = 3;
  uint64 atime = 4;
  uint64 mtime = 5;
  uint64 ctime = 6;
  uint64 atimensec = 7;
  uint64 mtimensec = 8;
  uint64 ctimensec = 9;
  uint32 mode = 10;
  uint32 nlink = 11;
  uint32 uid = 12;
  uint32 gid = 13;
  uint64 rdev = 14;
  uint32 blksize = 15;
}

message FSNode {
  string path = 1;
  FileAttributes attributes = 2;
  uint32 layer_position = 3;
}

message FSIndex {
  repeated FSNode paths = 1;
  repeated string without_dir = 2;
  repeated string without_file = 3;
  uint32 version = 4;
}
